--- a/debian/control
+++ b/debian/control
@@ -315,7 +315,7 @@ Architecture: linux-any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libgudev-1.0-0 (= ${binary:Version}),
-         gir1.2-gudev-1.0 (= ${binary:Version}),
+         gir1.2-gudev-1.0,
          libglib2.0-dev,
          pkg-config
 Description: libgudev-1.0 development files
