--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Vcs-Git: git://anonscm.debian.org/pkg-systemd/systemd.git -b debian
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-systemd/systemd.git;a=summary
 X-Python-Version: >= 2.7
 Homepage: http://www.freedesktop.org/wiki/Software/systemd
+XS-Testsuite: autopkgtest
 Build-Depends: debhelper (>= 9),
                libcap-dev,
                pkg-config,
@@ -269,17 +270,15 @@ Description: /dev/ and hotplug management daemon
  .
  This is a minimal version, only for use in the installation system.
 
-Package: udev-gtk-udeb
+Package: libudev1-udeb
 XC-Package-Type: udeb
 Section: debian-installer
 Priority: optional
 Architecture: linux-any
 Depends: ${shlibs:Depends},
-         ${misc:Depends},
-         udev-udeb
+         ${misc:Depends}
 Description: libudev shared library
  This library provides access to udev device information.
- The package additionally contains input_id and the related rules.
  .
  This is a minimal version, only for use in the installation system.
 
