--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,3 +1,3 @@
-Tests: timedated hostnamed localed
-Depends: systemd-services
+Tests: timedated hostnamed localed logind
+Depends: systemd-services, acl
 Restrictions: needs-root
