Import patches-unapplied version 198-0ubuntu7 to ubuntu/raring-proposed
Imported using git-ubuntu import.

Changelog parent: e90eaac7cb3f1766675d1993d204bb038846c1ca

New changelog entries:
  * Make systemd-services installable without forcing the usage of logind, so
    that we can install it by default for the other D-BUS services:
    - Move systemd-logind upstart job into libpam-systemd.
    - Drop systemd-services' Recommends: to libpam-systemd.
    - LP: #1156074

--- a/debian/control
+++ b/debian/control
@@ -89,7 +89,6 @@ Package: systemd-services
 Architecture: linux-any
 Section: admin
 Priority: extra
-Recommends: libpam-systemd
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends},
          ${misc:Depends},
@@ -114,7 +113,8 @@ Depends: systemd-services (= ${binary:Version}),
          ${shlibs:Depends},
          ${misc:Depends}
 Conflicts: libpam-xdg-support
-Replaces: libpam-xdg-support
+Replaces: libpam-xdg-support, systemd-services (<< 198-0ubuntu7)
+Breaks: systemd-services (<< 198-0ubuntu7)
 Provides: libpam-xdg-support
 Description: system and service manager - PAM module
  systemd is a replacement for sysvinit.  It is dependency-based and
