--- a/Makefile.am
+++ b/Makefile.am
@@ -1088,7 +1088,6 @@ tests += \
 	test-strv \
 	test-path-util \
 	test-strxcpyx \
-	test-unit-name \
 	test-unit-file \
 	test-util \
 	test-date \
@@ -1097,7 +1096,6 @@ tests += \
 	test-sched-prio \
 	test-calendarspec \
 	test-strip-tab-ansi \
-	test-cgroup-util \
 	test-prioq \
 	test-fileio \
 	test-time
@@ -2850,10 +2848,9 @@ tests += \
 	test-journal-send \
 	test-journal-syslog \
 	test-journal-match \
-	test-journal-stream \
 	test-journal-verify \
 	test-mmap-cache \
-	test-catalog
+	$(NULL)
 
 pkginclude_HEADERS += \
 	src/systemd/sd-journal.h \
