Import patches-unapplied version 202-0ubuntu5 to ubuntu/saucy-proposed
Imported using git-ubuntu import.

Changelog parent: ff5d27ace99fa9469eb0b5de5f45b01e61d9e305

New changelog entries:
  * Drop 0016-Add-poweroff-reboot-suspend-hibernate-fallback.patch.
    systemd-shim 3 has a much better implementation of pm-utils fallback.
    Recommend systemd or systemd-shim >= 3 for that.
  * Ship 70-power-switch.rules. (LP: #1160995)

--- a/debian/control
+++ b/debian/control
@@ -95,6 +95,7 @@ Depends: ${shlibs:Depends},
          ${misc:Depends},
          udev (>= 175-0ubuntu23),
          dbus
+Recommends: systemd | systemd-shim (>= 3)
 Replaces: systemd (<< 198-1), logind, ubuntu-system-service
 Breaks: systemd (<< 198-1)
 Conflicts: logind
