Import patches-unapplied version 202-0ubuntu6 to ubuntu/saucy-proposed
Imported using git-ubuntu import.

Changelog parent: 5a743e4251c6ec4116eb822a2f5ce7920f1045ec

New changelog entries:
  * Build udev from this source package:
    - Unblacklist udev and udev-udeb packages.
    - Drop 70-power-switch.rules from systemd-services (shipped in udev).
    - Port patches from old udev source package which are still relevant:
      + 0021-block-polling.patch
      + 0022-fix-race-condition-of-serio-driver-module-not-loading.patch
      + 0023-load-fbcon.patch
      + 0024-avoid-exit-deadlock-for-dm_cookie.patch
      + 75-persistent-net-generator.rules: Do not create persistent net rules
        for Ravello Systems MAC addresses. Now apply inline in
        debian/extra/rules, as upstream dropped these. (LP #1099278)
    - Add debian/extra/rules/78-graphics-card.rules (taken from old udev
      package)
    - Add debian/*.upstart from old udev package, and adjust dh_installinit
      calls accordingly.
    - Add Apport package hook.
    - Add READMEs for /lib/udev/rules.d/ and /etc/udev/rules.d/.
    - Add debian/udev.postinst for restarting udev and rebuilding initramfs.
    - Drop 0020-uaccess-rule-with-old-udev.patch, not necessary any more with
      current udev.
  * debian/extra/initramfs.hook: Adjust for changed paths and rules files.
  * debian/extra/initramfs.bottom: Replace undefined "nuke" with "rm -rf".
  * Install udev rules into udev-udeb.
  * Ship README.keymap.txt in udev, not in systemd.
  * Copy persistent net/cd rules generator scripts from udev 175 to
    debian/extra/, and adjust for dropped "udevadm info --run". We continue to
    use the old naming schema for the time being,  Don't install
    80-net-name-slot.rules for now.
  * debian/extra/initramfs.bottom: Ignore timeout errors from udevadm we
    expect (and indeed requested) in certain failure modes.  If we do not we
    will bail out early and not transfer /dev into /root which is always fata

--- a/debian/rules
+++ b/debian/rules
@@ -19,6 +19,7 @@ CONFFLAGS = \
 	--libexecdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH) \
 	--with-rootprefix= \
 	--with-rootlibdir=/lib/$(DEB_HOST_MULTIARCH) \
+	--with-firmware-path=/lib/firmware \
 	--with-sysvinit-path=/etc/init.d \
 	--with-sysvrcnd-path=/etc \
 	--enable-libcryptsetup \
@@ -56,7 +57,7 @@ CONFFLAGS_udeb = \
 # Ubuntu: udev transition to current version postponed to next release
 # Ubuntu: systemd{,-sysv} not yet approved for universe
 ifeq ($(shell dpkg-vendor --derives-from Ubuntu && echo ubuntu),ubuntu)
-BINARY_BLACKLIST = -Nudev -Nudev-udeb -Nsystemd -Nsystemd-sysv
+BINARY_BLACKLIST = -Nsystemd -Nsystemd-sysv
 endif
 
 override_dh_auto_configure: $(FLAVORS:%=debian/stamps/configure-%)
@@ -120,6 +121,14 @@ endif
 		debian/udev/usr/share/initramfs-tools/scripts/init-top/udev
 	install -D --mode=755 debian/extra/initramfs.bottom \
 		debian/udev/usr/share/initramfs-tools/scripts/init-bottom/udev
+	# documentation
+	install -D --mode=644 debian/systemd/usr/share/doc/systemd/README.keymap.txt \
+		debian/udev/usr/share/doc/udev/README.keymap.txt
+	install -m 644 -o root -g root debian/extra/README-etc-rules.d \
+		debian/udev/etc/udev/rules.d/README
+	install -m 644 -o root -g root debian/extra/README-lib-rules.d \
+		debian/udev/lib/udev/rules.d/README
+
 	# TODO: use a script to find duplicates and remove them automatically
 	# files shipped by systemd-sysv / sysvinit
 	rm debian/systemd/usr/share/man/man1/init.1
@@ -137,6 +146,7 @@ endif
 	rm debian/systemd/lib/systemd/systemd-udevd
 	rm debian/systemd/usr/share/man/man7/udev.7
 	rm debian/systemd/usr/share/man/man8/*udev*.8
+	rm debian/systemd/usr/share/doc/systemd/README.keymap.txt
 	# files systemd by cryptsetup
 	rm debian/systemd/usr/share/man/man5/crypttab.5
 	# files shipped by systemd-services
@@ -156,13 +166,20 @@ endif
 	# files shipped by systemd
 	rm debian/udev/lib/udev/rules.d/99-systemd.rules
 
+	# we continue to use the old net iface naming schema for the time being
+	rm debian/udev/lib/udev/rules.d/80-net-name-slot.rules
+	rm debian/udev-udeb/lib/udev/rules.d/80-net-name-slot.rules
+
 override_dh_makeshlibs:
 	dh_makeshlibs -plibudev1 --add-udeb=libudev1-udeb
 	dh_makeshlibs --remaining-packages
 
 override_dh_installinit:
-	dh_installinit --no-start -- start 03 S .
-	dh_installinit --no-start --name=udev-mtab -- start 36 S .
+	dh_installinit --upstart-only --no-start
+	dh_installinit --upstart-only --name=udev-finish --no-start
+	dh_installinit --upstart-only --name=udevtrigger --no-start
+	dh_installinit --upstart-only --name=udevmonitor --no-start
+	dh_installinit --upstart-only --name=udev-fallback-graphics --no-start
 	dh_installinit --name systemd-logind --upstart-only
 
 autoreconf:
@@ -177,7 +194,10 @@ override_dh_auto_test:
 	# some tests hang under fakeroot, so disable fakeroot
 	echo "01234567890123456789012345678901" > debian/build/machine-id
 	env -u LD_PRELOAD SYSTEMD_MACHINE_ID_PATH=$(CURDIR)/debian/build/machine-id \
-		make -C debian/build/deb check
+		make -C debian/build/deb check || ( \
+		cd debian/build/deb; \
+		for f in test-*.log; do echo "==== $$f ===="; cat $$f; done; \
+		exit 1; )
 
 %:
 	dh $@ --with autoreconf,gir,python2
