--- a/debian/control
+++ b/debian/control
@@ -235,6 +235,7 @@ Depends: ${shlibs:Depends},
          s390-tools (>> 1.6.2) [s390]
 Recommends: usbutils,
             pciutils
+Replaces: systemd-services (<< 202-0ubuntu6)
 Description: /dev/ and hotplug management daemon
  udev is a daemon which dynamically creates and removes device nodes from
  /dev/, handles hotplug events and loads drivers at boot time.
