Import patches-unapplied version 204-0ubuntu4 to ubuntu/saucy-proposed
Imported using git-ubuntu import.

Changelog parent: 0519c1f9a8cd94a7b0eb6c392a07105d0618a9fb

New changelog entries:
  * Properly integrate hwdb, to get back vendor/product names in the udev db:
    - Add 0024-hwdb-in-lib.patch: udev hwdb: Store binary database in libdir,
      not in /etc.
    - debian/rules: Build and ship pre-generated hwdb; do not ship the source
      files, they are quite big and for now we do not have other packages
      which want to add files there.
    - LP: #1190947

--- a/debian/rules
+++ b/debian/rules
@@ -169,6 +169,13 @@ endif
 	rm debian/udev/lib/udev/rules.d/80-net-name-slot.rules
 	rm debian/udev-udeb/lib/udev/rules.d/80-net-name-slot.rules
 
+	# build and ship pre-generated hwdb; do not ship the source files, they
+	# are quite big and for now we do not have other packages which want to
+	# add files there
+	debian/udev/bin/udevadm hwdb --update --root=$(CURDIR)/debian/udev/
+	rm -r debian/udev/lib/udev/hwdb.d
+	rmdir debian/udev/etc/udev/hwdb.d
+
 override_dh_makeshlibs:
 	dh_makeshlibs -plibudev1 --add-udeb=libudev1-udeb
 	dh_makeshlibs --remaining-packages
