204-0ubuntu6 (patches unapplied)
Imported using git-ubuntu import.

--- a/debian/rules
+++ b/debian/rules
@@ -19,7 +19,7 @@ CONFFLAGS = \
 	--libexecdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH) \
 	--with-rootprefix= \
 	--with-rootlibdir=/lib/$(DEB_HOST_MULTIARCH) \
-	--with-firmware-path=/lib/firmware:/system/firmware:/vendor/firmware \
+	--with-firmware-path=/lib/firmware	\
 	--with-sysvinit-path=/etc/init.d \
 	--with-sysvrcnd-path=/etc \
 	--enable-libcryptsetup \
@@ -168,13 +168,6 @@ endif
 	# we continue to use the old net iface naming schema for the time being
 	rm debian/udev/lib/udev/rules.d/80-net-name-slot.rules
 	rm debian/udev-udeb/lib/udev/rules.d/80-net-name-slot.rules
-
-	# build and ship pre-generated hwdb; do not ship the source files, they
-	# are quite big and for now we do not have other packages which want to
-	# add files there
-	debian/udev/bin/udevadm hwdb --update --root=$(CURDIR)/debian/udev/
-	rm -r debian/udev/lib/udev/hwdb.d
-	rmdir debian/udev/etc/udev/hwdb.d
 
 override_dh_makeshlibs:
 	dh_makeshlibs -plibudev1 --add-udeb=libudev1-udeb
