--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,8 @@ CONFFLAGS = \
 	--disable-coredump \
 	--disable-efi \
 	--disable-myhostname \
-	--disable-vconsole
+	--disable-vconsole \
+	--disable-silent-rules
 
 CONFFLAGS_deb = \
 	--enable-selinux \
@@ -176,8 +177,8 @@ override_dh_installdocs:
 	dh_installdocs --remaining-packages
 
 override_dh_installinit:
-	dh_installinit --no-start --update-rcd-params='start 03 S .'
-	dh_installinit --name=udev-finish --no-start -- start 37 S .
+	dh_installinit --no-start
+	dh_installinit --name=udev-finish --no-start
 	dh_installinit --name=udevtrigger --no-start
 	dh_installinit --name=udevmonitor --no-start
 	dh_installinit --name=udev-fallback-graphics --no-start
