Import patches-unapplied version 204-0ubuntu10 to ubuntu/saucy-proposed
Imported using git-ubuntu import.

Changelog parent: 5816ed08851d7e4a4fd71f06ac5e785691329654

New changelog entries:
  * debian/systemd-services.install: Install systemd-multi-seat-x
    (LP: #1214146)
  * debian/local/78-graphics-card.rules: Also recognize vmwgfx driver. Thanks
    Reagan Sanders! (LP: #1208024)
  * Add 0000-upstream-hwdb-updates.patch: Update to latest upstream fixes of
    hwdb, to get proper keyboard support.
  * Move to hwdb keymap database to be able to continue to sync to upstream,
    and benefit from the improved speed and eased maintenance:
    - Drop 0000-upstream-keymaps.patch.
    - Add 0000-upstream-hwdb-keyboard.patch to backport the "keymap" builtin.
    - Add debian/extra/60-keyboard.hwdb (straight copy from upstream master),
      install in debian/udev.install.
    - debian/rules: Configure with --disable-keymap to not build/install the
      old keymap stuff any more.
    - Adds keymap for Samsung NP53U3C (LP: #1203853)

--- a/debian/rules
+++ b/debian/rules
@@ -27,6 +27,7 @@ CONFFLAGS = \
 	--disable-coredump \
 	--disable-efi \
 	--disable-myhostname \
+	--disable-keymap \
 	--disable-vconsole
 
 CONFFLAGS_deb = \
@@ -121,8 +122,6 @@ endif
 	install -D --mode=755 debian/extra/initramfs.bottom \
 		debian/udev/usr/share/initramfs-tools/scripts/init-bottom/udev
 	# documentation
-	install -D --mode=644 debian/systemd/usr/share/doc/systemd/README.keymap.txt \
-		debian/udev/usr/share/doc/udev/README.keymap.txt
 	install -m 644 -o root -g root debian/extra/README-etc-rules.d \
 		debian/udev/etc/udev/rules.d/README
 	install -m 644 -o root -g root debian/extra/README-lib-rules.d \
@@ -145,7 +144,6 @@ endif
 	rm debian/systemd/lib/systemd/systemd-udevd
 	rm debian/systemd/usr/share/man/man7/udev.7
 	rm debian/systemd/usr/share/man/man8/*udev*.8
-	rm debian/systemd/usr/share/doc/systemd/README.keymap.txt
 	# files systemd by cryptsetup
 	rm debian/systemd/usr/share/man/man5/crypttab.5
 	# files shipped by systemd-services
