--- a/debian/control
+++ b/debian/control
@@ -48,6 +48,7 @@ Suggests: systemd-ui
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends},
          ${misc:Depends},
+         libsystemd-login0 (= ${binary:Version}),
          util-linux (>= 2.19.1-2),
          initscripts (>= 2.88dsf-17),
          udev
@@ -223,7 +224,6 @@ Depends: ${shlibs:Depends},
          s390-tools (>> 1.6.2) [s390],
          procps
 Breaks: consolekit (<< 0.4.6-1)
-Replaces: libudev0
 Description: /dev/ and hotplug management daemon
  udev is a daemon which dynamically creates and removes device nodes from
  /dev/, handles hotplug events and loads drivers at boot time.
