--- a/debian/rules
+++ b/debian/rules
@@ -11,6 +11,7 @@ CONFFLAGS = \
 	--with-sysvinit-path=/etc/init.d \
 	--with-sysvrcnd-path=/etc \
 	--with-firmware-path=/lib/firmware \
+	--with-debug-shell=/bin/bash \
 	--enable-libcryptsetup \
 	--enable-tcpwrap \
 	--disable-coredump \
@@ -66,12 +67,15 @@ override_dh_auto_clean:
 	rm -rf debian/install/
 	# remove pre-generated man pages so they are rebuilt
 	rm -f man/*.[13578]
+	# remove Python byte code files
+	rm -f *.pyc
 
 override_dh_install:
 	# remove unnecessary / unused files
 	rm -f debian/install/*/usr/share/doc/systemd/LICENSE.*
 	rm -f debian/install/*/var/log/README
 	rm -f debian/install/*/etc/init.d/README
+	rm -f debian/install/*/usr/share/man/man8/kernel-install.8
 	rm -rf debian/install/*/etc/rpm/
 	rm -rf debian/install/*/etc/kernel/
 	find debian/install/ -name '*.la' -delete
@@ -142,6 +146,8 @@ override_dh_install:
 		debian/systemd/lib/systemd/
 	install --mode=755 debian/systemd-logind-launch \
 		debian/systemd/lib/systemd/
+	# Remove tmp.mount symlink to avoid mounting /tmp as tmpfs by default.
+	rm debian/systemd/lib/systemd/system/local-fs.target.wants/tmp.mount
 	# remove duplicates
 	# files shipped by systemd-sysv / sysvinit
 	rm debian/systemd/usr/share/man/man1/init.1
