--- a/debian/control
+++ b/debian/control
@@ -265,13 +265,12 @@ Description: /dev/ and hotplug management daemon
  This is a minimal version, only for use in the installation system.
 
 Package: libudev1-udeb
-XC-Package-Type: udeb
+Package-Type: udeb
 Section: debian-installer
 Priority: optional
 Architecture: linux-any
 Depends: ${shlibs:Depends},
-         ${misc:Depends},
-         udev-udeb
+         ${misc:Depends}
 Description: libudev shared library
  This library provides access to udev device information.
  .
