--- a/debian/rules
+++ b/debian/rules
@@ -185,6 +185,8 @@ override_dh_install:
 		debian/systemd/usr/lib/tmpfiles.d/
 	install --mode=644 debian/debian-fixup.service debian/ifup@.service \
 		debian/systemd/lib/systemd/system/
+	install -D --mode=644 debian/extra/network-pre.conf \
+		debian/systemd/lib/systemd/system/networking.service.d/network-pre.conf
 	install --mode=644 debian/extra/udev-finish.service \
 		debian/udev/lib/systemd/system/
 	ln -s ../udev-finish.service debian/udev/lib/systemd/system/sysinit.target.wants/
