Prefer /etc/X11/default-display-manager if present
Gbp-Pq: Prefer-etc-X11-default-display-manager-if-present.patch.

--- a/Makefile.am
+++ b/Makefile.am
@@ -387,7 +387,8 @@ systemgenerator_PROGRAMS = \
 	systemd-getty-generator \
 	systemd-fstab-generator \
 	systemd-system-update-generator \
-	systemd-debug-generator
+	systemd-debug-generator \
+	systemd-default-display-manager-generator
 
 dist_bashcompletion_DATA = \
 	shell-completion/bash/busctl \
@@ -1963,6 +1964,14 @@ systemd_delta_SOURCES = \
 
 systemd_delta_LDADD = \
 	libsystemd-shared.la
+
+# ------------------------------------------------------------------------------
+systemd_default_display_manager_generator_SOURCES = \
+    src/default-display-manager-generator/default-display-manager-generator.c
+
+systemd_default_display_manager_generator_LDADD = \
+    libsystemd-label.la \
+    libsystemd-shared.la
 
 # ------------------------------------------------------------------------------
 systemd_insserv_generator_SOURCES = \
