--- a/Makefile.am
+++ b/Makefile.am
@@ -1375,13 +1375,12 @@ tests += \
 	test-capability \
 	test-async \
 	test-ratelimit \
-	test-condition \
 	test-uid-range \
 	test-bus-policy \
 	test-locale-util \
 	test-execute \
 	test-copy \
-	test-cap-list
+	$(NULL)
 
 EXTRA_DIST += \
 	test/a.service \
@@ -2840,10 +2839,8 @@ tests += \
 	test-bus-introspect \
 	test-bus-objects \
 	test-bus-error \
-	test-bus-creds \
 	test-bus-gvariant \
 	test-event \
-	test-rtnl \
 	test-local-addresses \
 	test-resolve
 
@@ -3154,7 +3151,6 @@ test_dhcp6_client_LDADD = \
 
 tests += \
 	test-dhcp-option \
-	test-dhcp-client \
 	test-dhcp-server \
 	test-ipv4ll \
 	test-icmp6-rs \
@@ -5337,7 +5333,6 @@ test_network_tables_LDADD = \
 	libudev-core.la
 
 tests += \
-	test-network \
 	test-network-tables
 
 nodist_systemunit_DATA += \
