--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Debian systemd Maintainers <pkg-systemd-maintainers@lists.alioth.deb
 Uploaders: Michael Biebl <biebl@debian.org>, Marco d'Itri <md@linux.it>, Michael Stapelberg <stapelberg@debian.org>, Sjoerd Simons <sjoerd@debian.org>, Martin Pitt <mpitt@debian.org>
 Standards-Version: 3.9.6
 Vcs-Git: git://anonscm.debian.org/pkg-systemd/systemd.git
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-systemd/systemd.git;a=summary
+Vcs-Browser: https://anonscm.debian.org/cgit/pkg-systemd/systemd.git
 X-Python-Version: >= 2.7
 XS-Testsuite: autopkgtest
 Homepage: http://www.freedesktop.org/wiki/Software/systemd
