--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,6 @@ CONFFLAGS = \
 	--with-zshcompletiondir=/usr/share/zsh/vendor-completions \
 	--with-sysvinit-path=/etc/init.d \
 	--with-sysvrcnd-path=/etc \
-	--with-firmware-path=/lib/firmware \
 	--with-debug-shell=/bin/bash \
 	--with-telinit=/lib/sysvinit/telinit \
 	--enable-split-usr \
@@ -71,7 +70,6 @@ CONFFLAGS_udeb = \
 	--disable-gcrypt \
 	--disable-gudev \
 	--disable-rfkill \
-	--disable-multi-seat-x \
 	--disable-manpages \
 	--without-python
 
@@ -191,10 +189,12 @@ endif
 		rm debian/udev/lib/udev/*.agent; \
 	fi
 
-# use symlinked doc directories on Debian as the old udev package did
+# use symlinked doc directories on Debian as the old udev package did; we have
+# to manually install udev's README for that
 override_dh_installdocs:
 	if ! dpkg-vendor --is ubuntu; then \
 		dh_installdocs -pudev -plibudev-dev --link-doc=libudev1; \
+		install -D --mode 644 debian/udev.README.Debian debian/libudev1/usr/share/doc/libudev1/README.Debian; \
 		dh_installdocs -pgir1.2-gudev-1.0 -plibgudev-1.0-dev --link-doc=libgudev-1.0-0; \
 	fi
 	dh_installdocs --remaining-packages
