--- a/debian/extra/ifup@.service
+++ b/debian/extra/ifup@.service
@@ -1,14 +1,16 @@
 [Unit]
 Description=ifup for %I
-After=local-fs.target network-pre.target networking.service
+After=local-fs.target network-pre.target
 Before=network.target
 BindsTo=sys-subsystem-net-devices-%i.device
-ConditionPathIsDirectory=/run/network
 DefaultDependencies=no
 
 [Service]
 Type=oneshot
+RuntimeDirectory=network
 ExecStart=/sbin/ifup --allow=hotplug %I
-ExecStartPost=/sbin/ifquery --state %I
+ExecStartPost=/sbin/ifup --allow=auto %I
+# only fail if ifupdown knows about the iface AND it's not up
+ExecStartPost=/bin/sh -c 'sh -c 'if ifquery %I >/dev/null; then ifquery --state %I >/dev/null; fi'
 ExecStop=/sbin/ifdown %I
 RemainAfterExit=true
