--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,6 +1,10 @@
 Tests: timedated hostnamed localed-locale localed-x11-keymap logind
 Depends: systemd, libpam-systemd, acl
-Restrictions: needs-root isolation-machine
+Restrictions: needs-root, isolation-machine
+
+Tests: unit-config
+Depends: systemd, python3
+Restrictions: needs-root, allow-stderr
 
 Tests: build-login
 Depends: libsystemd-dev, build-essential, pkg-config
