--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,5 +1,5 @@
 Tests: timedated hostnamed localed-locale localed-x11-keymap logind
-Depends: systemd, libpam-systemd, acl
+Depends: systemd, libpam-systemd, acl, locales
 Restrictions: needs-root, isolation-machine
 
 Tests: unit-config
@@ -18,9 +18,13 @@ Depends: lightdm, cron, network-manager, busybox-static, apparmor
 Restrictions: needs-root, isolation-machine, needs-recommends, breaks-testbed
 
 Tests: cmdline-upstart-boot
-Depends: systemd-sysv, cron, network-manager
+Depends: systemd-sysv, cron, network-manager, python3
 Restrictions: needs-root, isolation-machine, breaks-testbed
 
 Tests: display-managers
-Depends: systemd, lightdm
+Depends: systemd, lightdm, python3
 Restrictions: needs-root, isolation-machine, needs-recommends, breaks-testbed
+
+Tests: boot-smoke
+Depends: systemd-sysv, network-manager, policykit-1, lightdm
+Restrictions: needs-recommends, needs-root, isolation-container, allow-stderr
