--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,6 +1,10 @@
-Tests: timedated hostnamed localed-locale localed-x11-keymap logind
+Tests: timedated, hostnamed, localed-locale, localed-x11-keymap, logind
 Depends: systemd, libpam-systemd, acl, locales
-Restrictions: needs-root, isolation-machine
+Restrictions: needs-root, isolation-container
+
+Tests: bootchart
+Depends: systemd, libpam-systemd, acl, locales
+Restrictions: needs-root, isolation-machine, breaks-testbed
 
 Tests: unit-config
 Depends: systemd, python3
@@ -14,7 +18,7 @@ Tests: python3
 Depends: python3-systemd
 
 Tests: boot-and-services
-Depends: lightdm, cron, network-manager, busybox-static, apparmor
+Depends: systemd-sysv, lightdm, cron, network-manager, busybox-static, apparmor
 Restrictions: needs-root, isolation-machine, needs-recommends, breaks-testbed
 
 Tests: cmdline-upstart-boot
@@ -22,7 +26,7 @@ Depends: systemd-sysv, cron, network-manager, python3
 Restrictions: needs-root, isolation-machine, breaks-testbed
 
 Tests: display-managers
-Depends: systemd, lightdm, python3
+Depends: systemd-sysv, lightdm, python3
 Restrictions: needs-root, isolation-machine, needs-recommends, breaks-testbed
 
 Tests: boot-smoke
