--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: systemd
 Section: admin
 Priority: optional
-Maintainer: Debian systemd Maintainers <pkg-systemd-maintainers@lists.alioth.debian.org>
+Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
+XSBC-Original-Maintainer: Debian systemd Maintainers <pkg-systemd-maintainers@lists.alioth.debian.org>
 Uploaders: Michael Biebl <biebl@debian.org>, Marco d'Itri <md@linux.it>, Michael Stapelberg <stapelberg@debian.org>, Sjoerd Simons <sjoerd@debian.org>, Martin Pitt <mpitt@debian.org>
 Standards-Version: 3.9.6
 Vcs-Git: git://anonscm.debian.org/pkg-systemd/systemd.git
@@ -54,7 +55,7 @@ Pre-Depends: ${shlibs:Pre-Depends},
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libsystemd0 (= ${binary:Version}),
-         libapparmor1 (>= 2.9.0-3+exp1),
+         libapparmor1 (>= 2.8.98-0ubuntu4),
          util-linux (>= 2.25),
          mount (>= 2.25),
          initscripts (>= 2.88dsf-53.2),
@@ -65,17 +66,17 @@ Depends: ${shlibs:Depends},
 Breaks: lvm2 (<< 2.02.104-1),
         lsb-base (<< 4.1+Debian4),
         systemd-shim (<< 8-2)
-Conflicts: klogd
+Conflicts: klogd, systemd-services
+Replaces: systemd-services
+Provides: systemd-services
 Description: system and service manager
- systemd is a system and service manager for Linux. It provides aggressive
- parallelization capabilities, uses socket and D-Bus activation for starting
- services, offers on-demand starting of daemons, keeps track of processes
- using Linux control groups, supports snapshotting and restoring of the system
- state, maintains mount and automount points and implements an elaborate
- transactional dependency-based service control logic.
+ systemd is a replacement for sysvinit.  It is dependency-based and
+ able to read the LSB init script headers in addition to parsing rcN.d
+ links as hints.
  .
- systemd is compatible with SysV and LSB init scripts and can work as a
- drop-in replacement for sysvinit.
+ It also provides process supervision using cgroups and the ability to
+ not only depend on other init script being started, but also
+ availability of a given mount point or dbus service.
  .
  Installing the systemd package will not switch your init system unless you
  boot with init=/bin/systemd or install systemd-sysv in addition.
@@ -95,15 +96,13 @@ Depends: ${shlibs:Depends},
          ${misc:Depends},
          systemd (= ${binary:Version})
 Description: system and service manager - SysV links
- systemd is a system and service manager for Linux. It provides aggressive
- parallelization capabilities, uses socket and D-Bus activation for starting
- services, offers on-demand starting of daemons, keeps track of processes
- using Linux control groups, supports snapshotting and restoring of the system
- state, maintains mount and automount points and implements an elaborate
- transactional dependency-based service control logic.
+ systemd is a replacement for sysvinit.  It is dependency-based and
+ able to read the LSB init script headers in addition to parsing rcN.d
+ links as hints.
  .
- systemd is compatible with SysV and LSB init scripts and can work as a
- drop-in replacement for sysvinit.
+ It also provides process supervision using cgroups and the ability to
+ not only depend on other init script being started, but also
+ availability of a given mount point or dbus service.
  .
  This package provides the manual pages and links needed for systemd
  to replace sysvinit. Installing systemd-sysv will overwrite /sbin/init with a
@@ -122,15 +121,13 @@ Depends: ${shlibs:Depends},
          dbus,
          systemd-shim (>= 8-2) | systemd-sysv
 Description: system and service manager - PAM module
- systemd is a system and service manager for Linux. It provides aggressive
- parallelization capabilities, uses socket and D-Bus activation for starting
- services, offers on-demand starting of daemons, keeps track of processes
- using Linux control groups, supports snapshotting and restoring of the system
- state, maintains mount and automount points and implements an elaborate
- transactional dependency-based service control logic.
+ systemd is a replacement for sysvinit.  It is dependency-based and
+ able to read the LSB init script headers in addition to parsing rcN.d
+ links as hints.
  .
- systemd is compatible with SysV and LSB init scripts and can work as a
- drop-in replacement for sysvinit.
+ It also provides process supervision using cgroups and the ability to
+ not only depend on other init script being started, but also
+ availability of a given mount point or dbus service.
  .
  This package contains the PAM module which registers user sessions in
  the systemd control group hierarchy.
@@ -250,7 +247,7 @@ Depends: ${shlibs:Depends},
 Breaks: consolekit (<< 0.4.6-1),
         kmod (<< 14),
         systemd (<< 215-1),
-        plymouth (<< 0.9.0-7),
+        plymouth (<< 0.9.0-0ubuntu8~),
         bash-completion (<< 1:2.1)
 Replaces: bash-completion (<< 1:2.1)
 Description: /dev/ and hotplug management daemon
@@ -365,15 +362,13 @@ Depends: ${misc:Depends},
          libsystemd0 (= ${binary:Version}),
          libudev1 (= ${binary:Version})
 Description: system and service manager (debug symbols)
- systemd is a system and service manager for Linux. It provides aggressive
- parallelization capabilities, uses socket and D-Bus activation for starting
- services, offers on-demand starting of daemons, keeps track of processes
- using Linux control groups, supports snapshotting and restoring of the system
- state, maintains mount and automount points and implements an elaborate
- transactional dependency-based service control logic.
+ systemd is a replacement for sysvinit.  It is dependency-based and
+ able to read the LSB init script headers in addition to parsing rcN.d
+ links as hints.
  .
- systemd is compatible with SysV and LSB init scripts and can work as a
- drop-in replacement for sysvinit.
+ It also provides process supervision using cgroups and the ability to
+ not only depend on other init script being started, but also
+ availability of a given mount point or dbus service.
  .
  This package contains the debugging symbols for systemd, udev and
  related libraries.
