--- a/debian/tests/control
+++ b/debian/tests/control
@@ -18,7 +18,7 @@ Tests: python3
 Depends: python3-systemd
 
 Tests: boot-and-services
-Depends: systemd-sysv, lightdm, cron, network-manager, busybox-static, apparmor, python3
+Depends: systemd-sysv, lightdm, cron, network-manager, busybox-static, apparmor
 Restrictions: needs-root, isolation-machine, needs-recommends, breaks-testbed
 
 Tests: cmdline-upstart-boot
